k8s/chainmaker/template/node1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org4-org4node1
  namespace: chainmaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: org4-org4node1
  template:
    metadata:
      labels:
        app: org4-org4node1
    spec:
      containers:
        - name: org4-org4node1
          image: "chainmakerofficial/chainmaker:v2.3.1"
          imagePullPolicy: IfNotPresent
          command: ["./chainmaker"]
          args: ["start", "-c", "/chainmaker-go/config/org4/chainmaker.yml"]
          # command: ["sh", "-c", "sleep 48h"]
          ports:
            - name: libp2p
              containerPort: 11301
            - name: rpc
              containerPort: 12301
        volumeMounts:
          - name: org4-org4node1-data-pvc
            mountPath: /chainmaker-go/data
          - name: org4-org4node1-config-pvc
            mountPath: /chainmaker-go/config
          - name: org4-org4node1-log-pvc
            mountPath: /chainmaker-go/log
      - name: docker-go-container
        securityContext:
          privileged: true
        image: chainmakerofficial/chainmaker-vm-engine:v2.3.1
        resources:
          # limits:
            # cpu: "4"
            # memory: "8Gi"
          # requests:
            # cpu: "1"
            # memory: "2Gi"
        ports:
          - containerPort: 22351
            name: vmport
            protocol: TCP
      volumes:
        - name: org4-org4node1-config-pvc
          persistentVolumeClaim:
            claimName: org4-org4node1-config-pvc
        - name: org4-org4node1-data-pvc
          persistentVolumeClaim:
            claimName: org4-org4node1-data-pvc    
        - name: org4-org4node1-log-pvc
          persistentVolumeClaim:
            claimName: org4-org4node1-log-pvc
        - name: chainmaker-cert-pvc
          persistentVolumeClaim:
            claimName: chainmaker-cert-pvc
