k8s/chainmaker/template/node-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    app: {orgid}-{nodename}
  name: {orgid}-{nodeid}
spec:
  ingressClassName: nginx
  rules:
    - host: {orgid}-{nodeid}.${DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: {orgid}-{nodeid}-grpc
                port:
                  name: grpc
            path: /
            pathType: ImplementationSpecific
